fix button wrap style

--- a/src/components/Sudoku/Controls/Controls.module.scss
+++ b/src/components/Sudoku/Controls/Controls.module.scss
@@ -14,6 +14,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 
     .Tip {
       flex: 1 0;
