--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -8,6 +8,7 @@
   font: inherit;
   font-weight: bold;
   border: 1px solid black;
+  white-space: nowrap;
 
   &:hover,
   &:active {
