--- a/src/containers/Sudodu/Sudoku.module.scss
+++ b/src/containers/Sudodu/Sudoku.module.scss
@@ -34,12 +34,3 @@
     overflow: scroll;
   }
 }
-
-.QRCode {
-  width: 100%;
-  text-align: center;
-  overflow-wrap: break-word;
-  p {
-    border: 1px solid black;
-  }
-}
